--- a/themes/startbootstrap-clean-blog/layouts/post/single.html
+++ b/themes/startbootstrap-clean-blog/layouts/post/single.html
@@ -29,9 +29,12 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                   {{ .Content }}
+                  {{ template "_internal/disqus.html" . }}
                 </div>
             </div>
         </div>
     </article>
+
+
 
 {{ partial "footer.html" .}}
