change name of blog and page's titles

--- a/themes/startbootstrap-clean-blog/layouts/partials/header.html
+++ b/themes/startbootstrap-clean-blog/layouts/partials/header.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ .Title }} -- {{ .Site.Title }}</title>
+    <title>{{ .Title }}</title>
 
     {{ if .RSSlink }}
     <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
